--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#dbdbdb" />
+  <meta name="description" content="Audio Plugins DB">
   <link rel="stylesheet" href="src/index.css">
   <title>Rerack</title>
 
